src/objects/Tax__c.object
<CustomObject>
    <fields>
        <fullName>Customer_E_Receipts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer E-Receipts</label>
        <referenceTo>Customer_E_Receipts__c</referenceTo>
        <relationshipLabel>Taxes</relationshipLabel>
        <relationshipName>Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>Customer_E_Receipts__r.Email_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxID__c</fullName>
        <label>TaxID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tax_Description__c</fullName>
        <label>Tax Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_DisplayCode__c</fullName>
        <label>Tax DisplayCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Indicator__c</fullName>
        <label>Tax Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Total__c</fullName>
        <label>Tax Total</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <label>Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>NetTax</fullName>
                </value>
                <value>
                    <fullName>TaxExempt</fullName>
                </value>
                <value>
                    <fullName>TotalVAT</fullName>
                </value>
                <value>
                    <fullName>TotalAddOnVAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>